--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ h1, h2, h3, h4, h5, h6 {
 /*
 SUPER SLICK TRANSFORMS
 */
-/* line 6, ../sass/_transforms.scss */
+/* line 7, ../sass/_transforms.scss */
 .fly-in-down, .fly-in-up, .fly-in-right, .fly-in-left {
   -webkit-transition: opacity 300ms 200ms ease;
   -moz-transition: opacity 300ms 200ms ease;
@@ -139,36 +139,36 @@ SUPER SLICK TRANSFORMS
   animation-fill-mode: forwards !important;
 }
 
-/* line 18, ../sass/_transforms.scss */
+/* line 19, ../sass/_transforms.scss */
 .fly-in-down {
-  opacity: 0;
+  opacity: 0.85;
   -webkit-animation: flyindown 400ms ease;
   -moz-animation: flyindown 400ms ease;
   -o-animation: flyindown 400ms ease;
   animation: flyindown 400ms ease;
 }
 
-/* line 26, ../sass/_transforms.scss */
+/* line 27, ../sass/_transforms.scss */
 .fly-in-up {
-  opacity: 0;
+  opacity: 0.85;
   -webkit-animation: flyinup 400ms ease;
   -moz-animation: flyinup 400ms ease;
   -o-animation: flyinup 400ms ease;
   animation: flyinup 400ms ease;
 }
 
-/* line 34, ../sass/_transforms.scss */
+/* line 35, ../sass/_transforms.scss */
 .fly-in-right {
-  opacity: 0.85;
+  opacity: 0 0.85;
   -webkit-animation: flyinright 400ms ease;
   -moz-animation: flyinright 400ms ease;
   -o-animation: flyinright 400ms ease;
   animation: flyinright 400ms ease;
 }
 
-/* line 42, ../sass/_transforms.scss */
+/* line 43, ../sass/_transforms.scss */
 .fly-in-left {
-  opacity: 0;
+  opacity: 0.85;
   -webkit-animation: flyinleft 400ms ease;
   -moz-animation: flyinleft 400ms ease;
   -o-animation: flyinleft 400ms ease;
@@ -177,12 +177,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyindown*/
 @-webkit-keyframes flyindown {
-  /* line 53, ../sass/_transforms.scss */
+  /* line 58, ../sass/_transforms.scss */
   0% {
-    -webkit-transform: translate(0, 50px);
+    -webkit-transform: translate(0, 0.2em);
   }
 
-  /* line 54, ../sass/_transforms.scss */
+  /* line 59, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -190,12 +190,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyindown {
-  /* line 57, ../sass/_transforms.scss */
+  /* line 62, ../sass/_transforms.scss */
   0% {
-    -moz-transform: translate(0, 50px);
+    -moz-transform: translate(0, 0.2em);
   }
 
-  /* line 58, ../sass/_transforms.scss */
+  /* line 63, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -203,12 +203,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyindown {
-  /* line 61, ../sass/_transforms.scss */
+  /* line 66, ../sass/_transforms.scss */
   0% {
-    -ms-transform: translate(0, 50px);
+    -ms-transform: translate(0, 0.2em);
   }
 
-  /* line 62, ../sass/_transforms.scss */
+  /* line 67, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -216,12 +216,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyindown {
-  /* line 65, ../sass/_transforms.scss */
+  /* line 70, ../sass/_transforms.scss */
   0% {
-    -o-transform: translate(0, 50px);
+    -o-transform: translate(0, 0.2em);
   }
 
-  /* line 66, ../sass/_transforms.scss */
+  /* line 71, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -229,12 +229,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyindown {
-  /* line 69, ../sass/_transforms.scss */
+  /* line 74, ../sass/_transforms.scss */
   0% {
-    transform: translate(0, 50px);
+    transform: translate(0, 0.2em);
   }
 
-  /* line 70, ../sass/_transforms.scss */
+  /* line 75, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -243,12 +243,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyinup*/
 @-webkit-keyframes flyinup {
-  /* line 75, ../sass/_transforms.scss */
+  /* line 80, ../sass/_transforms.scss */
   0% {
-    -webkit-transform: translate(0, -50px);
+    -webkit-transform: translate(0, -0.2em);
   }
 
-  /* line 76, ../sass/_transforms.scss */
+  /* line 81, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -256,12 +256,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyinup {
-  /* line 79, ../sass/_transforms.scss */
+  /* line 84, ../sass/_transforms.scss */
   0% {
-    -moz-transform: translate(0, -50px);
+    -moz-transform: translate(0, -0.2em);
   }
 
-  /* line 80, ../sass/_transforms.scss */
+  /* line 85, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -269,12 +269,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyinup {
-  /* line 83, ../sass/_transforms.scss */
+  /* line 88, ../sass/_transforms.scss */
   0% {
-    -ms-transform: translate(0, -50px);
+    -ms-transform: translate(0, -0.2em);
   }
 
-  /* line 84, ../sass/_transforms.scss */
+  /* line 89, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -282,12 +282,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyinup {
-  /* line 87, ../sass/_transforms.scss */
+  /* line 92, ../sass/_transforms.scss */
   0% {
-    -o-transform: translate(0, -50px);
+    -o-transform: translate(0, -0.2em);
   }
 
-  /* line 88, ../sass/_transforms.scss */
+  /* line 93, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -295,12 +295,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyinup {
-  /* line 91, ../sass/_transforms.scss */
+  /* line 96, ../sass/_transforms.scss */
   0% {
-    transform: translate(0, -50px);
+    transform: translate(0, -0.2em);
   }
 
-  /* line 92, ../sass/_transforms.scss */
+  /* line 97, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -309,12 +309,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyinright*/
 @-webkit-keyframes flyinright {
-  /* line 97, ../sass/_transforms.scss */
+  /* line 102, ../sass/_transforms.scss */
   0% {
-    -webkit-transform: translate(-1px, 0);
+    -webkit-transform: translate(-0.2em, 0);
   }
 
-  /* line 98, ../sass/_transforms.scss */
+  /* line 103, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -322,12 +322,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyinright {
-  /* line 101, ../sass/_transforms.scss */
+  /* line 106, ../sass/_transforms.scss */
   0% {
-    -moz-transform: translate(-1px, 0);
+    -moz-transform: translate(-0.2em, 0);
   }
 
-  /* line 102, ../sass/_transforms.scss */
+  /* line 107, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -335,12 +335,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyinright {
-  /* line 105, ../sass/_transforms.scss */
+  /* line 110, ../sass/_transforms.scss */
   0% {
-    -ms-transform: translate(-1px, 0);
+    -ms-transform: translate(-0.2em, 0);
   }
 
-  /* line 107, ../sass/_transforms.scss */
+  /* line 112, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -348,12 +348,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyinright {
-  /* line 110, ../sass/_transforms.scss */
+  /* line 115, ../sass/_transforms.scss */
   0% {
-    -o-transform: translate(-1px, 0);
+    -o-transform: translate(-0.2em, 0);
   }
 
-  /* line 111, ../sass/_transforms.scss */
+  /* line 116, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -361,12 +361,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyinright {
-  /* line 114, ../sass/_transforms.scss */
+  /* line 119, ../sass/_transforms.scss */
   0% {
-    transform: translate(-1px, 0);
+    transform: translate(-0.2em, 0);
   }
 
-  /* line 115, ../sass/_transforms.scss */
+  /* line 120, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -375,12 +375,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyinleft*/
 @-webkit-keyframes flyinleft {
-  /* line 120, ../sass/_transforms.scss */
+  /* line 125, ../sass/_transforms.scss */
   0% {
-    -webkit-transform: translate(50px, 0);
+    -webkit-transform: translate(0.2em, 0);
   }
 
-  /* line 121, ../sass/_transforms.scss */
+  /* line 126, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -388,12 +388,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyinleft {
-  /* line 124, ../sass/_transforms.scss */
+  /* line 129, ../sass/_transforms.scss */
   0% {
-    -moz-transform: translate(50px, 0);
+    -moz-transform: translate(0.2em, 0);
   }
 
-  /* line 125, ../sass/_transforms.scss */
+  /* line 130, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -401,12 +401,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyinleft {
-  /* line 128, ../sass/_transforms.scss */
+  /* line 133, ../sass/_transforms.scss */
   0% {
-    -ms-transform: translate(50px, 0);
+    -ms-transform: translate(0.2em, 0);
   }
 
-  /* line 130, ../sass/_transforms.scss */
+  /* line 135, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -414,12 +414,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyinleft {
-  /* line 133, ../sass/_transforms.scss */
+  /* line 138, ../sass/_transforms.scss */
   0% {
-    -o-transform: translate(50px, 0);
+    -o-transform: translate(0.2em, 0);
   }
 
-  /* line 134, ../sass/_transforms.scss */
+  /* line 139, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -427,12 +427,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyinleft {
-  /* line 137, ../sass/_transforms.scss */
+  /* line 142, ../sass/_transforms.scss */
   0% {
-    transform: translate(50px, 0);
+    transform: translate(0.2em, 0);
   }
 
-  /* line 138, ../sass/_transforms.scss */
+  /* line 143, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
