--- a/sass/_transforms.scss
+++ b/sass/_transforms.scss
@@ -2,6 +2,7 @@
 /*
 SUPER SLICK TRANSFORMS
 */
+$opacity:.85;
 
 %transform-base{
   -webkit-transition: opacity 300ms 200ms ease;
@@ -17,7 +18,7 @@ SUPER SLICK TRANSFORMS
 }
 .fly-in-down{
   @extend %transform-base;
-  opacity:0;
+  opacity:$opacity;
   -webkit-animation: flyindown 400ms ease;
   -moz-animation: flyindown 400ms ease;
   -o-animation: flyindown 400ms ease;
@@ -25,7 +26,7 @@ SUPER SLICK TRANSFORMS
 }
 .fly-in-up{
   @extend %transform-base;
-  opacity:0;
+  opacity:$opacity;
   -webkit-animation: flyinup 400ms ease;
   -moz-animation: flyinup 400ms ease;
   -o-animation: flyinup 400ms ease;
@@ -33,7 +34,7 @@ SUPER SLICK TRANSFORMS
 }
 .fly-in-right{
   @extend %transform-base;
-  opacity:0.85;
+  opacity:0$opacity;
   -webkit-animation: flyinright 400ms ease;
   -moz-animation: flyinright 400ms ease;
   -o-animation: flyinright 400ms ease;
@@ -41,99 +42,103 @@ SUPER SLICK TRANSFORMS
 }
 .fly-in-left{
   @extend %transform-base;
-  opacity:0;
+  opacity:$opacity;
   -webkit-animation: flyinleft 400ms ease;
   -moz-animation: flyinleft 400ms ease;
   -o-animation: flyinleft 400ms ease;
   animation: flyinleft 400ms ease;
 }
 
+
+$how-much: .2em;
+
+
 /*flyindown*/
 @-webkit-keyframes flyindown {
-  0% {-webkit-transform: translate(0,50px);} 
+  0% {-webkit-transform: translate(0, $how-much);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyindown {
-  0% {-moz-transform: translate(0,50px);} 
+  0% {-moz-transform: translate(0, $how-much);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyindown {
-  0% {-ms-transform: translate(0,50px);} 
+  0% {-ms-transform: translate(0, $how-much);} 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyindown {
-  0% {-o-transform: translate(0,50px);} 
+  0% {-o-transform: translate(0, $how-much);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyindown {
-  0% {transform: translate(0,50px);} 
+  0% {transform: translate(0, $how-much);} 
   100% {opacity:1;transform: translate(0,0);}
 }
 
 /*flyinup*/
 @-webkit-keyframes flyinup {
-  0% {-webkit-transform: translate(0,-50px);} 
+  0% {-webkit-transform: translate(0,-$how-much);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyinup {
-  0% {-moz-transform:  translate(0,-50px);} 
+  0% {-moz-transform:  translate(0,-$how-much);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyinup {
-  0% {-ms-transform: translate(0,-50px);} 
+  0% {-ms-transform: translate(0,-$how-much);} 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyinup {
-  0% {-o-transform:  translate(0,-50px);} 
+  0% {-o-transform:  translate(0,-$how-much);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyinup {
-  0% {transform: translate(0,-50px)} 
+  0% {transform: translate(0,-$how-much)} 
   100% {opacity:1;transform: translate(0,0);}
 }
 
 /*flyinright*/
 @-webkit-keyframes flyinright {
-  0% {-webkit-transform: translate(-1px,0);} 
+  0% {-webkit-transform: translate(-$how-much,0);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyinright {
-  0% {-moz-transform:  translate(-1px,0);} 
+  0% {-moz-transform:  translate(-$how-much,0);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyinright {
-  0% {-ms-transform: translate(-1px,0);
+  0% {-ms-transform: translate(-$how-much,0);
   } 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyinright {
-  0% {-o-transform:  translate(-1px,0);} 
+  0% {-o-transform:  translate(-$how-much,0);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyinright{
-  0% {transform: translate(-1px,0)} 
+  0% {transform: translate(-$how-much,0)} 
   100% {opacity:1;transform: translate(0,0);}
 }
 
 /*flyinleft*/
 @-webkit-keyframes flyinleft {
-  0% {-webkit-transform: translate(50px,0);} 
+  0% {-webkit-transform: translate($how-much,0);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyinleft {
-  0% {-moz-transform:  translate(50px,0);} 
+  0% {-moz-transform:  translate($how-much,0);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyinleft {
-  0% {-ms-transform: translate(50px,0);
+  0% {-ms-transform: translate($how-much,0);
   } 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyinleft {
-  0% {-o-transform:  translate(50px,0);} 
+  0% {-o-transform:  translate($how-much,0);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyinleft {
-  0% {transform: translate(50px,0)} 
+  0% {transform: translate($how-much,0)} 
   100% {opacity:1;transform: translate(0,0);}
 }
