--- a/sass/_colorbox.scss
+++ b/sass/_colorbox.scss
@@ -19,6 +19,7 @@
     Change the following styles to modify the appearance of Colorbox.  They are
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
+
 #cboxOverlay{background:url(images/overlay.png) repeat 0 0;}
 #colorbox{outline:0;}
     #cboxTopLeft{width:21px; height:21px; background:url(images/controls.png) no-repeat -101px 0;}
@@ -29,7 +30,7 @@
     #cboxMiddleRight{width:21px; background:url(images/controls.png) right top repeat-y;}
     #cboxTopCenter{height:21px; background:url(images/border.png) 0 0 repeat-x;}
     #cboxBottomCenter{height:21px; background:url(images/border.png) 0 -29px repeat-x;}
-    #cboxContent{background:#fff; overflow:hidden;}
+    #cboxContent{overflow:hidden;}
         .cboxIframe{background:#fff;}
         #cboxError{padding:50px; border:1px solid #ccc;}
         #cboxLoadedContent{margin-bottom:28px;}
