i cannot believe it but animation work now

--- a/css/main.css
+++ b/css/main.css
@@ -1106,3 +1106,11 @@ input {
   background: #ffbb00;
   color: inherit;
 }
+
+/* line 33, ../sass/_general.scss */
+.debug {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.5);
+}
