--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -28,3 +28,11 @@ input{
 }
 ::selection{background:$color-main;color:inherit;}
 ::-moz-selection{background:$color-main;color:inherit;}
+
+
+.debug{
+	position:fixed;
+	top:0;
+	right:0;
+	background:rgba(255,255,255,.5);
+}
