--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ input, select {
 /* line 1, ../sass/_rwd.scss */
 img {
   max-width: 100%;
+  height: 10em;
 }
 
 /* line 1, ../sass/_typography.scss */
