--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -85,22 +85,22 @@
 
 
 @-webkit-keyframes realtime-anim{
-	0% { background:lighten($color-main,46%); }
-	100% { background:lighten($color-main,50%); }
+	0% { background:lighten($color-main,40%); }
+	100% { background:none; }
 }
 @-moz-keyframes realtime-anim{
-	0% { background:lighten($color-main,46%); }
-	100% { background:lighten($color-main,50%); }
+	0% { background:lighten($color-main,40%); }
+	100% { background:none; }
 }
 @-ms-keyframes realtime-anim{
-	0% { background:lighten($color-main,46%); }
-	100% { background:lighten($color-main,50%); }
+	0% { background:lighten($color-main,40%); }
+	100% { background:none; }
 }
 @-o-keyframes realtime-anim{
-	0% { background:lighten($color-main,46%); }
-	100% { background:lighten($color-main,50%); }
+	0% { background:lighten($color-main,40%); }
+	100% { background:none; }
 }
 @keyframes realtime-anim{
-	0% { background:lighten($color-main,46%); }
-	100% { background:lighten($color-main,50%); }
+	0% { background:lighten($color-main,40%); }
+	100% { background:none; }
 }
