--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -102,6 +102,7 @@
 		text-overflow: ellipsis;
 		white-space: nowrap;
 	    overflow: hidden;
+	    color:#666;
 	}
 
 .online-users{
@@ -184,7 +185,7 @@
 
 	float:left;
 	
-	opacity: 1;
+	opacity: .5;
 
 	&.online,&.on{
 		background:#29A100;
