--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,6 @@ input, select {
 /* line 1, ../sass/_rwd.scss */
 img {
   max-width: 100%;
-  height: 10em;
 }
 
 /* line 1, ../sass/_typography.scss */
@@ -852,21 +851,23 @@ SUPER SLICK TRANSFORMS
   padding: 0em 0.5em;
   border-bottom: 1px dotted #EFEFEF;
   border-left: 2px solid transparent;
+  overflow: visible !important;
 }
 
-/* line 17, ../sass/_messages.scss */
-.useravatar {
-  height: 1em;
-  width: 1em;
-  margin-top: .5em;
-  margin-bottom: .5em;
-  margin-left: .5em;
+/* line 19, ../sass/_messages.scss */
+.useravatar, .sameUser {
+  height: 1.8em;
+  width: 1.8em;
+  margin-top: .2em;
+  margin-bottom: .2em;
+  margin-left: -1.5em;
   border-radius: 35%;
   border-bottom-right-radius: 0px;
   vertical-align: top;
+  display: inline-block;
 }
 
-/* line 29, ../sass/_messages.scss */
+/* line 33, ../sass/_messages.scss */
 .username, .text {
   display: inline-block;
   vertical-align: middle;
@@ -881,13 +882,13 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 48, ../sass/_messages.scss */
+/* line 52, ../sass/_messages.scss */
 .message-image {
   max-width: 100%;
   max-height: 5em;
 }
 
-/* line 55, ../sass/_messages.scss */
+/* line 59, ../sass/_messages.scss */
 .cssanimations.csstransitions .realtime {
   -webkit-animation: realtime-anim 5s ease-in-out;
   -moz-animation: realtime-anim 5s ease-in-out;
@@ -895,12 +896,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 5s ease-in-out;
 }
 
-/* line 65, ../sass/_messages.scss */
+/* line 69, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 68, ../sass/_messages.scss */
+/* line 72, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -917,18 +918,6 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 99, ../sass/_messages.scss */
-  0% {
-    border-left: 2px solid #ffbb00;
-  }
-
-  /* line 100, ../sass/_messages.scss */
-  100% {
-    border-left: 2px solid transparent;
-  }
-}
-
-@-moz-keyframes realtime-anim {
   /* line 103, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
@@ -940,7 +929,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@-ms-keyframes realtime-anim {
+@-moz-keyframes realtime-anim {
   /* line 107, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
@@ -952,7 +941,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@-o-keyframes realtime-anim {
+@-ms-keyframes realtime-anim {
   /* line 111, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
@@ -964,13 +953,25 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-@keyframes realtime-anim {
+@-o-keyframes realtime-anim {
   /* line 115, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
   }
 
   /* line 116, ../sass/_messages.scss */
+  100% {
+    border-left: 2px solid transparent;
+  }
+}
+
+@keyframes realtime-anim {
+  /* line 119, ../sass/_messages.scss */
+  0% {
+    border-left: 2px solid #ffbb00;
+  }
+
+  /* line 120, ../sass/_messages.scss */
   100% {
     border-left: 2px solid transparent;
   }
