--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -10,9 +10,11 @@ $color-main:#FFCC00;
 $color-main:#ffc801;
 $color-main:#FFBB00;
 
-
 $color-secondary: #f1c40f;
+
+$color-border:lightgrey;
 
 $transition-duration:.25s;
 
 $toggle-size:3.33em;
+
