--- a/css/main.css
+++ b/css/main.css
@@ -103,11 +103,6 @@ input, select {
   text-rendering: optimizeLegibility;
 }
 
-/* line 1, ../sass/_rwd.scss */
-img {
-  max-width: 100%;
-}
-
 /* line 1, ../sass/_typography.scss */
 body {
   font: 100% / 1.3 sans-serif;
@@ -127,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
 SUPER SLICK TRANSFORMS
 */
 /* line 8, ../sass/_transforms.scss */
-.fly-in-down, .fly-in-up, .fly-in-right, .fly-in-left {
+.fly-in-up, .fly-in-right, .fly-in-left {
   -webkit-transition: opacity 300ms 200ms ease;
   -moz-transition: opacity 300ms 200ms ease;
   -ms-transition: opacity 300ms 200ms ease;
@@ -141,14 +136,14 @@ SUPER SLICK TRANSFORMS
 
 /* line 20, ../sass/_transforms.scss */
 .fly-in-down {
-  opacity: 0.85;
   -webkit-animation: flyindown 1000ms ease;
   -moz-animation: flyindown 1000ms ease;
+  -ms-animation: flyindown 1000ms ease;
   -o-animation: flyindown 1000ms ease;
   animation: flyindown 1000ms ease;
 }
 
-/* line 28, ../sass/_transforms.scss */
+/* line 27, ../sass/_transforms.scss */
 .fly-in-up {
   opacity: 0.85;
   -webkit-animation: flyinup 1000ms ease;
@@ -157,7 +152,7 @@ SUPER SLICK TRANSFORMS
   animation: flyinup 1000ms ease;
 }
 
-/* line 36, ../sass/_transforms.scss */
+/* line 35, ../sass/_transforms.scss */
 .fly-in-right {
   opacity: 0 0.85;
   -webkit-animation: flyinright 1000ms ease;
@@ -166,7 +161,7 @@ SUPER SLICK TRANSFORMS
   animation: flyinright 1000ms ease;
 }
 
-/* line 44, ../sass/_transforms.scss */
+/* line 43, ../sass/_transforms.scss */
 .fly-in-left {
   opacity: 0.85;
   -webkit-animation: flyinleft 1000ms ease;
@@ -177,12 +172,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyindown*/
 @-webkit-keyframes flyindown {
-  /* line 59, ../sass/_transforms.scss */
+  /* line 58, ../sass/_transforms.scss */
   0% {
     -webkit-transform: translate(0, 1em);
   }
 
-  /* line 60, ../sass/_transforms.scss */
+  /* line 59, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -190,12 +185,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyindown {
-  /* line 63, ../sass/_transforms.scss */
+  /* line 62, ../sass/_transforms.scss */
   0% {
     -moz-transform: translate(0, 1em);
   }
 
-  /* line 64, ../sass/_transforms.scss */
+  /* line 63, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -203,12 +198,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyindown {
-  /* line 67, ../sass/_transforms.scss */
+  /* line 66, ../sass/_transforms.scss */
   0% {
     -ms-transform: translate(0, 1em);
   }
 
-  /* line 68, ../sass/_transforms.scss */
+  /* line 67, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -216,12 +211,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyindown {
-  /* line 71, ../sass/_transforms.scss */
+  /* line 70, ../sass/_transforms.scss */
   0% {
     -o-transform: translate(0, 1em);
   }
 
-  /* line 72, ../sass/_transforms.scss */
+  /* line 71, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -229,12 +224,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyindown {
-  /* line 75, ../sass/_transforms.scss */
+  /* line 74, ../sass/_transforms.scss */
   0% {
     transform: translate(0, 1em);
   }
 
-  /* line 76, ../sass/_transforms.scss */
+  /* line 75, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -243,12 +238,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyinup*/
 @-webkit-keyframes flyinup {
-  /* line 81, ../sass/_transforms.scss */
+  /* line 80, ../sass/_transforms.scss */
   0% {
     -webkit-transform: translate(0, -1em);
   }
 
-  /* line 82, ../sass/_transforms.scss */
+  /* line 81, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -256,12 +251,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyinup {
-  /* line 85, ../sass/_transforms.scss */
+  /* line 84, ../sass/_transforms.scss */
   0% {
     -moz-transform: translate(0, -1em);
   }
 
-  /* line 86, ../sass/_transforms.scss */
+  /* line 85, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -269,12 +264,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyinup {
-  /* line 89, ../sass/_transforms.scss */
+  /* line 88, ../sass/_transforms.scss */
   0% {
     -ms-transform: translate(0, -1em);
   }
 
-  /* line 90, ../sass/_transforms.scss */
+  /* line 89, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -282,12 +277,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyinup {
-  /* line 93, ../sass/_transforms.scss */
+  /* line 92, ../sass/_transforms.scss */
   0% {
     -o-transform: translate(0, -1em);
   }
 
-  /* line 94, ../sass/_transforms.scss */
+  /* line 93, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -295,12 +290,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyinup {
-  /* line 97, ../sass/_transforms.scss */
+  /* line 96, ../sass/_transforms.scss */
   0% {
     transform: translate(0, -1em);
   }
 
-  /* line 98, ../sass/_transforms.scss */
+  /* line 97, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -309,12 +304,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyinright*/
 @-webkit-keyframes flyinright {
-  /* line 103, ../sass/_transforms.scss */
+  /* line 102, ../sass/_transforms.scss */
   0% {
     -webkit-transform: translate(-1em, 0);
   }
 
-  /* line 104, ../sass/_transforms.scss */
+  /* line 103, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -322,12 +317,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyinright {
-  /* line 107, ../sass/_transforms.scss */
+  /* line 106, ../sass/_transforms.scss */
   0% {
     -moz-transform: translate(-1em, 0);
   }
 
-  /* line 108, ../sass/_transforms.scss */
+  /* line 107, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -335,12 +330,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyinright {
-  /* line 111, ../sass/_transforms.scss */
+  /* line 110, ../sass/_transforms.scss */
   0% {
     -ms-transform: translate(-1em, 0);
   }
 
-  /* line 113, ../sass/_transforms.scss */
+  /* line 112, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -348,12 +343,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyinright {
-  /* line 116, ../sass/_transforms.scss */
+  /* line 115, ../sass/_transforms.scss */
   0% {
     -o-transform: translate(-1em, 0);
   }
 
-  /* line 117, ../sass/_transforms.scss */
+  /* line 116, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -361,12 +356,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyinright {
-  /* line 120, ../sass/_transforms.scss */
+  /* line 119, ../sass/_transforms.scss */
   0% {
     transform: translate(-1em, 0);
   }
 
-  /* line 121, ../sass/_transforms.scss */
+  /* line 120, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -375,12 +370,12 @@ SUPER SLICK TRANSFORMS
 
 /*flyinleft*/
 @-webkit-keyframes flyinleft {
-  /* line 126, ../sass/_transforms.scss */
+  /* line 125, ../sass/_transforms.scss */
   0% {
     -webkit-transform: translate(1em, 0);
   }
 
-  /* line 127, ../sass/_transforms.scss */
+  /* line 126, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate(0, 0);
@@ -388,12 +383,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-moz-keyframes flyinleft {
-  /* line 130, ../sass/_transforms.scss */
+  /* line 129, ../sass/_transforms.scss */
   0% {
     -moz-transform: translate(1em, 0);
   }
 
-  /* line 131, ../sass/_transforms.scss */
+  /* line 130, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -moz-transform: translate(0, 0);
@@ -401,12 +396,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-ms-keyframes flyinleft {
-  /* line 134, ../sass/_transforms.scss */
+  /* line 133, ../sass/_transforms.scss */
   0% {
     -ms-transform: translate(1em, 0);
   }
 
-  /* line 136, ../sass/_transforms.scss */
+  /* line 135, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -ms-transform: translate(0, 0);
@@ -414,12 +409,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @-o-keyframes flyinleft {
-  /* line 139, ../sass/_transforms.scss */
+  /* line 138, ../sass/_transforms.scss */
   0% {
     -o-transform: translate(1em, 0);
   }
 
-  /* line 140, ../sass/_transforms.scss */
+  /* line 139, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     -o-transform: translate(0, 0);
@@ -427,12 +422,12 @@ SUPER SLICK TRANSFORMS
 }
 
 @keyframes flyinleft {
-  /* line 143, ../sass/_transforms.scss */
+  /* line 142, ../sass/_transforms.scss */
   0% {
     transform: translate(1em, 0);
   }
 
-  /* line 144, ../sass/_transforms.scss */
+  /* line 143, ../sass/_transforms.scss */
   100% {
     opacity: 1;
     transform: translate(0, 0);
@@ -840,8 +835,6 @@ SUPER SLICK TRANSFORMS
 .messages {
   list-style-type: none;
   max-width: 31em;
-  background: rgba(255, 255, 255, 0.6);
-  box-shadow: 3px 3px 25px lightgrey;
   border-radius: .5em;
   margin-bottom: 2em;
 }
@@ -852,9 +845,12 @@ SUPER SLICK TRANSFORMS
   border-bottom: 1px dotted #EFEFEF;
   border-left: 2px solid transparent;
   overflow: visible !important;
+  background: #FDFDFD;
+  border-left: 1px solid lightgrey;
+  border-right: 1px solid lightgrey;
 }
 
-/* line 19, ../sass/_messages.scss */
+/* line 22, ../sass/_messages.scss */
 .useravatar, .sameUser {
   height: 1.8em;
   width: 1.8em;
@@ -867,7 +863,7 @@ SUPER SLICK TRANSFORMS
   display: inline-block;
 }
 
-/* line 33, ../sass/_messages.scss */
+/* line 36, ../sass/_messages.scss */
 .username, .text {
   display: inline-block;
   vertical-align: middle;
@@ -882,26 +878,38 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 52, ../sass/_messages.scss */
+/* line 51, ../sass/_messages.scss */
 .message-image {
-  max-width: 100%;
   max-height: 5em;
 }
 
-/* line 59, ../sass/_messages.scss */
-.cssanimations.csstransitions .realtime {
-  -webkit-animation: realtime-anim 5s ease-in-out;
-  -moz-animation: realtime-anim 5s ease-in-out;
-  -o-animation: realtime-anim 5s ease-in-out;
-  animation: realtime-anim 5s ease-in-out;
+/* line 56, ../sass/_messages.scss */
+.diffUser {
+  margin-top: 1em;
+  border-top-right-radius: .5em;
+  border-top-left-radius: .5em;
+  border-top: 1px solid lightgrey;
 }
 
-/* line 69, ../sass/_messages.scss */
+/* line 62, ../sass/_messages.scss */
+.lastOfUser {
+  border-bottom: 1px solid lightgrey;
+}
+
+/* line 67, ../sass/_messages.scss */
+.cssanimations.csstransitions .realtime {
+  -webkit-animation: realtime-anim 5s ease-out;
+  -moz-animation: realtime-anim 5s ease-out;
+  -o-animation: realtime-anim 5s ease-out;
+  animation: realtime-anim 5s ease-out;
+}
+
+/* line 75, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 72, ../sass/_messages.scss */
+/* line 78, ../sass/_messages.scss */
 #mymessage {
   vertical-align: middle;
   resize: none;
@@ -918,62 +926,62 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 103, ../sass/_messages.scss */
+  /* line 109, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
   }
 
-  /* line 104, ../sass/_messages.scss */
+  /* line 110, ../sass/_messages.scss */
   100% {
-    border-left: 2px solid transparent;
+    border-left: 2px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 107, ../sass/_messages.scss */
+  /* line 113, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
   }
 
-  /* line 108, ../sass/_messages.scss */
+  /* line 114, ../sass/_messages.scss */
   100% {
-    border-left: 2px solid transparent;
+    border-left: 2px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 111, ../sass/_messages.scss */
+  /* line 117, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
   }
 
-  /* line 112, ../sass/_messages.scss */
+  /* line 118, ../sass/_messages.scss */
   100% {
-    border-left: 2px solid transparent;
+    border-left: 2px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 115, ../sass/_messages.scss */
+  /* line 121, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
   }
 
-  /* line 116, ../sass/_messages.scss */
+  /* line 122, ../sass/_messages.scss */
   100% {
-    border-left: 2px solid transparent;
+    border-left: 2px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 119, ../sass/_messages.scss */
+  /* line 125, ../sass/_messages.scss */
   0% {
     border-left: 2px solid #ffbb00;
   }
 
-  /* line 120, ../sass/_messages.scss */
+  /* line 126, ../sass/_messages.scss */
   100% {
-    border-left: 2px solid transparent;
+    border-left: 2px solid lightgrey;
   }
 }
 
@@ -1080,7 +1088,7 @@ body > * {
 
 /* line 16, ../sass/_general.scss */
 body {
-  background: #FAFAFA;
+  background: #F0F0F0;
 }
 
 /* line 20, ../sass/_general.scss */
