--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -19,7 +19,7 @@
 		border-left:1px solid $color-border;
 		border-right:1px solid $color-border;
 	}
-		.useravatar,.sameUser{
+		.avatar{
 			height:1.8em;
 			width: 1.8em;
 			margin-top:.2em;
@@ -31,6 +31,9 @@
 
 			vertical-align: top;
 			display: inline-block;
+			background: none;
+			background: transparent;
+			background-size:100%!important;
 
 		}
 		.username,.text{
